Atualizado img, downloads

--- a/templates/carteiras.html
+++ b/templates/carteiras.html
@@ -21,7 +21,7 @@
       <div class="wallet-cards">
         <div class="wallet-card">
           <div class="wallet-header">
-            <img src="{{ url_for('static', filename='img/coinos.png') }}" alt="Coinos" class="wallet-logo">
+            <img src="{{ url_for('static', filename='img/logo_coinos.png') }}" alt="Coinos" class="wallet-logo">
             <div class="wallet-name">Coinos</div>
             <div class="wallet-type">Web & Mobile</div>
           </div>
@@ -58,7 +58,7 @@
 
         <div class="wallet-card">
           <div class="wallet-header">
-            <img src="{{ url_for('static', filename='img/wos.jpg') }}" alt="Wallet of Satoshi" class="wallet-logo">
+            <img src="{{ url_for('static', filename='img/logo_wos.png') }}" alt="Wallet of Satoshi" class="wallet-logo">
             <div class="wallet-name">Wallet of Satoshi</div>
             <div class="wallet-type">Mobile</div>
           </div>
@@ -95,7 +95,7 @@
 
         <div class="wallet-card">
           <div class="wallet-header">
-            <img src="{{ url_for('static', filename='img/strike.png') }}" alt="Strike" class="wallet-logo">
+            <img src="{{ url_for('static', filename='img/logo_strike.png') }}" alt="Strike" class="wallet-logo">
             <div class="wallet-name">Strike</div>
             <div class="wallet-type">Mobile</div>
           </div>
