--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,11 @@
   <main class="container">
     <section class="hero" style="padding: 30px 20px;">
       <h1>Aceita Bitcoin?</h1>
-      <p>Encontre estabelecimentos que aceitam Bitcoin em Carambeí e região</p>
-    </section>
+      <p>
+        Tão simples quanto um PIX, tão revolucionário quanto a internet.<br>
+        Não é só para nerds. É para todos. É para você.
+      </p>
+        </section>
 
     <!-- Seção de passos simplificados -->
     <section class="steps-container">
