--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -52,7 +52,7 @@
           <div class="stat-icon">
             <i class="fas fa-store"></i>
           </div>
-          <div class="stat-value">37</div>
+          <div class="stat-value">04</div>
           <div class="stat-label">Estabelecimentos</div>
         </div>
 
@@ -68,7 +68,7 @@
           <div class="stat-icon">
             <i class="fas fa-exchange-alt"></i>
           </div>
-          <div class="stat-value">215</div>
+          <div class="stat-value">NA</div>
           <div class="stat-label">Transações Mensais</div>
         </div>
 
@@ -76,7 +76,7 @@
           <div class="stat-icon">
             <i class="fas fa-users"></i>
           </div>
-          <div class="stat-value">12%</div>
+          <div class="stat-value">NA</div>
           <div class="stat-label">Crescimento Mensal</div>
         </div>
       </div>
