adicionado link no footer para a BRLN

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -39,7 +39,7 @@
     </div>
   </div>
   <div class="copyright">
-    <p>&copy; 2025 Aceita Bitcoin? - Clube BR⚡LN. Todos os direitos reservados.</p>
+    <p>&copy; 2025 Aceita Bitcoin? - <a href="https://br-ln.com" target="_blank">Clube BR⚡LN.</a> Todos os direitos reservados.</p>
     <p>Powered by <img src="https://bitcoin.org/img/icons/logotop.svg" alt="Bitcoin Logo" class="bitcoin-logo"> Bitcoin
     </p>
   </div>
