--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,14 @@
 <html lang="pt-br">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZQVS83N61C"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-ZQVS83N61C');
+    </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aceita Bitcoin? - Clube BR⚡LN</title>
@@ -10,6 +18,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/btcmap-flags.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
+
 </head>
 
 <body>
