Correção da logo e atualização das redes sociais

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,10 +4,8 @@
       <h4>Aceita Bitcoin?</h4>
       <p>Iniciativa do Clube BR⚡LN para promover a adoção de Bitcoin em estabelecimentos comerciais.</p>
       <div class="social-links">
-        <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-        <a href="#" target="_blank"><i class="fab fa-telegram"></i></a>
-        <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-        <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.instagram.com/aceitabitcoin.club/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://github.com/dverschoor78/aqui-aceita-bitcoin" target="_blank"><i class="fab fa-github"></i></a>
       </div>
     </div>
     <div class="footer-section">
@@ -33,7 +31,7 @@
     <div class="footer-section">
       <h4>Contato</h4>
       <ul>
-        <li><i class="fas fa-envelope me-2"></i> contato@aquiaceitabitcoin.com.br</li>
+        <li><i class="fas fa-envelope me-2"></i> aceitabitcoin@aceitabitcoin.club</li>
         <li><i class="fas fa-map-marker-alt me-2"></i> Carambeí, Paraná, Brasil</li>
       </ul>
     </div>
